[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1_part1"
path = "src/day1_trebuchet/part1.rs"

[[bin]]
name = "day1_part2"
path = "src/day1_trebuchet/part2.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
